# AI-Workbench

./: .gitignore  README.md  agentic_rag.ipynb  multimodal.ipynb  ollama_tools.ipynb  unstruct_to_struct.ipynb
MCP/: README.md  main.py  pyproject.toml  sample.json
SQL/: adddata.py  langchain_demo.ipynb  langchaindemo.py  vana_ai_test.ipynb  yt_demo.ipynb
deep_agent/: .env.example  main.py  pyproject.toml
google_adk_agent/: README.md  pyproject.toml
google_adk_agent/yt_shorts_assistant/: agent.py  loop_agent.py  loop_agent_runner.py
googleadk_agent/: main.py
langchain_multi-agent/: multi-agent_system.py
langchain_multi_agent/: README.md  multi-agent_system.py  requirements.txt  sample_data.txt
natural_lang_to_sql/: chatollama.ipynb  chatollama.py  langchain_demo.py  requirements.txt  vana_ai_test.ipynb  vana_ai_test.py
natural_lang_to_sql/Fine-tune modelfile/: configmodelfile
natural_lang_to_sql/data/: demo.db  sample.db  test.db
natural_lang_to_sql/data/csv_files/: sample.csv
rag_test/: README.md  csv_rag.py  main.py  pdf_rag.py  pyproject.toml  test.ipynb  test.py
rag_test/chroma/pdf_collection/: chroma.sqlite3
rag_test/chromadb/: chroma.sqlite3
rag_test/data/: ICD.csv
